--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["src/components/*"],
       "@data/*": ["src/data/*"],
       "@images/*": ["src/images/*"],
       "@scripts/*": ["src/scripts/*"],
